fix layout issues

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ nav {
     text-justify: distribute;
     padding-top: 1rem;
     max-height: 50%;
+    font-size: 2vw;
 }
 
 .content button {
@@ -358,7 +359,7 @@ nav {
        display: none;
     }
     .home {
-        width: 100vw;
+        width: 100%;
         margin: 0;
     }
 
